resources/app-sre/telemeter-production/conprof.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: conprof
  name: conprof
spec:
  host: conprof.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: conprof
    weight: 100
  wildcardPolicy: None
