resources/app-sre/telemeter-production/observatorium-api-production.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: observatorium-api
  name: observatorium-api
spec:
  host: observatorium-legacy.api.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
