resources/app-sre/telemeter-production/observatorium-jaeger-production.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: jaeger
  name: observatorium-jaeger
spec:
  host: observatorium-jaeger-production.1061.app-sre.openshiftapps.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: jaeger-query
    weight: 100
  wildcardPolicy: None
