resources/app-sre/telemeter-production/observatorium-thanos-querier-production.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: thanos-querier
  name: observatorium-thanos-querier
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: thanos-querier
    weight: 100
  wildcardPolicy: None
