resources/app-sre/telemeter-production/prometheus-test.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    prometheus: telemeter
  name: prometheus-test
spec:
  host: prometheus-test-telemeter-production.1061.app-sre.openshiftapps.com
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-telemeter
    weight: 100
  wildcardPolicy: None
