resources/app-sre/telemeter-production/telemeter-server-upload.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  # Cert-manager annotation set in telemeter-server.route.yaml
  # All routes using the same host share the same certificate
  name: telemeter-server-upload
spec:
  host: infogw.api.openshift.com
  path: /upload
  port:
    targetPort: external
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-server
    weight: 100
  wildcardPolicy: None
