resources/app-sre/telemeter-production/telemeter-test.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    k8s-app: telemeter-server
  name: telemeter-test
spec:
  host: telemeter-test-telemeter-production.1061.app-sre.openshiftapps.com
  port:
    targetPort: external
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: telemeter-server
    weight: 100
  wildcardPolicy: None
